--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@examples/trpc-next-prisma-starter",
-  "version": "10.11.1",
+  "name": "zatsudan72-talksearch-frontend",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "migrate-sqlite": "prisma migrate dev --name init --schema=./prisma/_sqlite/schema.prisma",
@@ -40,6 +40,10 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.9",
     "@prisma/client": "^4.9.0",
     "@tanstack/react-query": "^4.3.8",
     "@trpc/client": "^10.11.1",
@@ -49,28 +53,41 @@
     "clsx": "^1.1.1",
     "next": "^13.0.0",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
+    "styled-components": "^5.3.6",
     "superjson": "^1.7.4",
+    "swr": "^2.0.3",
     "zod": "^3.0.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.26.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.7.20",
     "@types/react": "^18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
-    "@typescript-eslint/parser": "^5.47.0",
-    "eslint": "^8.30.0",
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "eslint": "^8.34.0",
     "eslint-config-next": "^13.1.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.11",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "prisma": "^4.9.0",
     "start-server-and-test": "^1.12.0",
+    "ts-jest": "^29.0.5",
     "tsx": "^3.9.0",
     "typescript": "^4.8.3",
+    "typescript-eslint": "0.0.1-alpha.0",
     "vite": "^3.1.3",
     "vitest": "^0.23.4"
   },
