--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "npm-run-all": "^4.1.5",
