--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 # Make sure to override these in deployment
 DATABASE_URL=postgresql://postgres:@localhost:5432/next-prisma-starter-new
+ALGOLIA_APP_ID=UI6Z9F83KB
+ALGOLIA_APP_KEY=6bddae559e6cd79d50b703a3c583581e
