--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@trpc/next": "^10.11.1",
     "@trpc/react-query": "^10.11.1",
     "@trpc/server": "^10.11.1",
+    "algoliasearch": "^4.14.3",
     "clsx": "^1.1.1",
     "next": "^13.0.0",
     "react": "^18.2.0",
